Thu Apr 19 11:20:29 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * expected/qt/html/qt_uic_moc.html:

          Updated to reflect Johnny's change from Wed Apr 18 09:27:12 UTC
          2007.

Wed Apr 18 11:01:34 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * expected/more_cirular_dependencies/*:
        * tests/more_cirular_dependencies/Code.mpc:
        * tests/more_cirular_dependencies/Factory.mpc:
        * tests/more_cirular_dependencies/ROOT.mpc:
        * tests/more_cirular_dependencies/Set.mpc:
        * tests/more_cirular_dependencies/code.cpp:
        * tests/more_cirular_dependencies/code_export.h:
        * tests/more_cirular_dependencies/factory.cpp:
        * tests/more_cirular_dependencies/factory_export.h:
        * tests/more_cirular_dependencies/root.cpp:
        * tests/more_cirular_dependencies/root_export.h:
        * tests/more_cirular_dependencies/set.cpp:
        * tests/more_cirular_dependencies/set_export.h:

          Modified this test to build on Windows.

        * tests/more_cirular_dependencies/foo.cpp:

          Removed this file.

Thu Mar 29 13:44:03 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * expected/more_cirular_dependencies/*:
        * tests/more_cirular_dependencies/Code.mpc:
        * tests/more_cirular_dependencies/Factory.mpc:
        * tests/more_cirular_dependencies/ROOT.mpc:
        * tests/more_cirular_dependencies/Set.mpc:
        * tests/more_cirular_dependencies/foo.cpp:

          Added a new test to exercise my change from Mon Mar 26 16:22:00
          UTC 2007.

Thu Mar 29 13:38:52 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * expected/*/nmake/*/Makefile.*.mak:

          Updated to reflect my change from Mon Mar 26 16:22:00 UTC 2007.

        * run_tests.pl:

          Fixed a bug where if one test was built, the others were not
          checked to ensure that they were built with at least one build
          tool.
